--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp" android:color="#000000" />
-    <corners android:radius="4dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="8dp"/>
+    <solid android:color="#FF808080"/>  <!-- 填充色改为灰色 -->
+    <stroke android:width="1dp" android:color="#FF000000"/>  <!-- 边框颜色改为黑色 -->
 </shape>
